# apify-org

./: README.md
apify-mcp-server/: .editorconfig  .env.example  .gitignore  .mcp.json  .sentryclirc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_SYSTEM_AGENT_INSTRUCTIONS.md  DEVELOPMENT.md  README.md  eslint.config.mjs  manifest.json  package-lock.json  package.json  pyproject.toml  server.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
apify-mcp-server/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_spec.yml
apify-mcp-server/.github/scripts/: before-beta-release.js
apify-mcp-server/.github/workflows/: _check_code.yaml  _evaluations.yaml  _publish_to_pkg_pr_new.yaml  _smoke_test_npm_package.yaml  _update_release_metadata.yaml  manual_publish_to_npm.yaml  manual_release_stable.yaml  on_master.yaml  on_pull_request.yaml  on_pull_request_label.yaml  on_pull_request_merged.yaml
apify-mcp-server/docs/: claude-code-tools.json
apify-mcp-server/evals/: README.md  config.ts  create_dataset.ts  eval_single.ts  evaluation_utils.ts  run_evaluation.ts  test_cases.json  tsconfig.json
apify-mcp-server/evals/shared/: config.ts  line_range_filter.ts  line_range_parser.ts  openai_tools.ts  test_case_loader.ts  types.ts
apify-mcp-server/evals/workflows/: README.md  config.ts  conversation_executor.ts  llm_client.ts  mcp_client.ts  output_formatter.ts  results.json  results_writer.ts  run_workflow_evals.ts  test_cases.json  test_cases_loader.ts  types.ts  workflow_judge.ts
apify-mcp-server/notebooks/: evaluation_2025.ipynb
apify-mcp-server/res/: actor_input_schema_required_fields.md  algolia.md  call_actor_redesign_v4.md  index.md  integration_test_coverage_audit.md  integration_test_coverage_plan.md  mcp_resources_analysis.md  mcp_server_refactor_analysis.md  patterns_for_simplification.md  pricing_output_contract.md
apify-mcp-server/scripts/: check_widgets.ts
apify-mcp-server/src/: apify_client.ts  const.ts  dev_server.ts  errors.ts  index_internals.ts  input.ts  instrument.ts  stdio.ts  telemetry.ts  tsconfig.json  types.ts
apify-mcp-server/src/mcp/: actors.ts  client.ts  proxy.ts  server.ts  utils.ts
apify-mcp-server/src/payments/: helpers.ts  index.ts
apify-mcp-server/src/prompts/: index.ts  latest_news_on_topic.ts
apify-mcp-server/src/resources/: resource_service.ts  widgets.ts
apify-mcp-server/src/tools/: build.ts  categories.ts  index.ts  structured_output_schemas.ts  utils.ts
apify-mcp-server/src/utils/: actor.ts  actor_card.ts  actor_details.ts  actor_search.ts  ajv.ts  apify_docs.ts  apify_properties.ts  auth.ts  generic.ts  logging.ts  mcp.ts  mcp_clients.ts  payment_errors.ts  pricing_info.ts  progress.ts  schema_generation.ts  server_mode.ts  tool_categories_helpers.ts  tool_status.ts  tools.ts  tools_loader.ts  userid_cache.ts  version.ts
apify-mcp-server/src/web/: actor-detail.html  build.js  common.css  index-actor-run.html  index-actor-search.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apify-mcp-server/tests/: README.md  const.ts  helpers.ts
apify-mcp-server/tests/integration/: actor.server_sse.test.ts  actor.server_streamable.test.ts  internals.test.ts  suite.ts
apify-mcp-server/tests/unit/: evals.config.test.ts  input.test.ts  mcp.server.capability_gating.test.ts  mcp.utils.test.ts  payments.helpers.test.ts  schema_generation.test.ts  telemetry.test.ts  tools.actor_execution.test.ts  tools.call_actor_common.test.ts  tools.call_actor_widget.response.test.ts  tools.categories.test.ts  tools.fetch_actor_details.widget.response.test.ts  tools.fetch_apify_docs.test.ts  tools.utils.test.ts  (+24 more)
impit/impit/: Cargo.toml  README.md
impit/impit-node/: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  README.md  dts-header.d.ts  errors.js  index.d.ts  index.js  index.wrapper.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
impit/impit-python/: CHANGELOG.md  Cargo.toml  pyproject.toml
(+309 files in other folders)
