[package]
edition = "2021"
name = "impit-python"
version = "0.0.0"

[lib]
name = "impit"
crate-type = ["cdylib"]

[dependencies]
impit = { path="../impit" }
rustls = { version="0.23.36" }
tokio = { version="1.41.1", features = ["full"] }
h2 = "0.4.7"
reqwest = "0.13.1"
tokio-stream = "0.1.17"
bytes = "1.9.0"
pyo3 = { version = "0.28", features = ["extension-module", "auto-initialize", "either"] }
pyo3-async-runtimes = { version = "0.28", features = ["attributes", "async-std-runtime", "tokio-runtime"] }
urlencoding = "2.1.3"
encoding = "0.2.33"
cookie = "0.18.1"
futures = "0.3.31"
either = "1.15.0"
