[package]
name = "impit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
hickory-client = "0.25.1"
hickory-proto = "0.25.1"
log = "0.4.22"
mime = "0.3.17"
reqwest = { version="0.13.1", features = ["json", "gzip", "brotli", "zstd", "deflate", "http3", "cookies", "stream", "socks"] }
rustls = { version="0.23.36", features=["impit"] }
lol_html = "2.7.2"
thiserror = "2.0.12"
tokio = { version="1.40.0", features = ["full"] }
url = "2.5.2"
rustls-platform-verifier = "0.6"
webpki-root-certs = "1.0.5"
hyper-util = "0.1.18"
hyper = "1.7.0"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
